fix: border layout preview (#418)
* fix: fixed the border radius layout preview

The border-radius preview that overflows out of it's container has been rectified and fixed

"fix #1"

* fixed the border radius layout

--- a/src/style.css
+++ b/src/style.css
@@ -844,9 +844,15 @@ input[type='number']::-webkit-outer-spin-button {
 .border-radius-preview-box {
   width: 250px;
   height: 250px;
-  border: 1px dashed var(--text-color);
+  outline: 1px dashed var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 1rem;
   position: relative;
+}
+.border-radius-preview-box + .btn-container {
+  margin-top: 1rem;
 }
 
 .border-radius-preview-box .preview {
